--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.0.5",
     "axios": "^1.8.1",
     "mailparser": "^3.7.2",
     "reflect-metadata": "^0.2.2",
